# rpg

./: Cargo.toml
assets/models/: F1_Tree1.glb
assets/models/F1_Tree1_out/: F1_Tree1.gltf
assets/models/nature/: tree_01.glb  tree_02.glb  tree_03.glb  tree_04.glb
assets/shaders/: blend_textures.wgsl  depth_buffer_outline.wgsl  height_map.wgsl  initial_spectrum.wgsl  ocean_compute.wgsl  ocean_compute_2.wgsl  perlin_noise.wgsl  terrain_fragment.wgsl  vertex_height.wgsl  water_material.wgsl
src/: lib.rs  main.rs  ocean.rs  terrain.rs
