[package]
name = "bevy_world_gen"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", features = ["bevy_dev_tools", "experimental_bevy_feathers"] }
bevy_flycam = "0.17.0"
avian3d = { version = "0.4", features = ["3d", "f32", "parry-f32", "debug-plugin", "simd"] }
bytemuck = "1.24.0"
noise = "0.9.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

